--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ chardet==3.0.4
 coreapi==2.3.3
 coreschema==0.0.4
 diff-match-patch==20121119
-Django==2.0
+django>=2.0.8
 django-cors-headers==2.4.0
 django-cors-middleware==1.3.1
 django-crispy-forms==1.7.2
@@ -39,7 +39,7 @@ python-dateutil==2.7.5
 pytz==2018.5
 PyYAML==3.13
 redis==3.0.1
-requests==2.19.1
+requests>=2.20.0
 six==1.11.0
 tablib==0.12.1
 unicodecsv==0.14.1
