--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
-certifi==2018.8.24
+certifi==2018.11.29
 chardet==3.0.4
 coreapi==2.3.3
 coreschema==0.0.4
-diff-match-patch==20121119
-django>=2.0.8
+defusedxml==0.5.0
+diff-match-patch==20181111
+Django==2.1.4
 django-cors-headers==2.4.0
 django-cors-middleware==1.3.1
 django-crispy-forms==1.7.2
@@ -11,39 +12,41 @@ django-filter==2.0.0
 django-formtools==2.1
 django-guardian==1.4.9
 django-haystack==2.8.1
-django-import-export==1.0.1
-django-mdeditor==0.1.8
+django-import-export==1.1.0
+django-mdeditor==0.1.9
 django-redis==4.10.0
-django-reversion==3.0.0
-djangorestframework==3.8.2
+django-reversion==3.0.2
+djangorestframework==3.9.0
 djangorestframework-jwt==1.11.0
-drf-extensions==0.4.0
 drf-haystack==1.8.4
-elasticsearch==2.4.1
+elasticsearch==6.3.1
 et-xmlfile==1.0.1
-future==0.16.0
-httplib2==0.9.2
-idna==2.7
+future==0.17.1
+httplib2==0.12.0
+idna==2.8
 itypes==1.1.0
 jdcal==1.4
 Jinja2==2.10
 Markdown==3.0.1
-MarkupSafe==1.0
+MarkupSafe==1.1.0
 mysqlclient==1.3.14
-odfpy==1.3.6
-openpyxl==2.5.7
-Pillow==5.2.0
+odfpy==1.4.0
+openpyxl==2.5.12
+packaging==18.0
+Pillow==5.3.0
+pip-review==1.0
 psycopg2==2.7.6.1
-PyJWT==1.6.4
+PyJWT==1.7.1
+pyparsing==2.3.0
 python-dateutil==2.7.5
-pytz==2018.5
+pytz==2018.7
 PyYAML==3.13
 redis==3.0.1
-requests>=2.20.0
-six==1.11.0
+requests==2.21.0
+six==1.12.0
 tablib==0.12.1
 unicodecsv==0.14.1
 uritemplate==3.0.0
-urllib3==1.23
-xlrd==1.1.0
+urllib3==1.24.1
+xlrd==1.2.0
 xlwt==1.3.0
