--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+backports.csv==1.0.7
 certifi==2018.11.29
 chardet==3.0.4
 coreapi==2.3.3
@@ -22,6 +23,7 @@ drf-haystack==1.8.4
 elasticsearch==6.3.1
 et-xmlfile==1.0.1
 future==0.17.1
+gunicorn==19.9.0
 httplib2==0.12.0
 idna==2.8
 itypes==1.1.0
